# lar_car_like

./: README.md
blender/car_like_description/urdf/: car_like.urdf.xacro
blender/car_like_description/urdf/meshes/: front_left_steer_link.dae  front_left_wheel.dae  front_right_steer_link.dae  front_right_wheel.dae  rear_left_wheel.dae  rear_right_wheel.dae
blender/tosdf/car_like_rover/: model.config  model.sdf
blender/tosdf/car_like_rover/meshes/: wheel1.dae  wheel2.dae  wheel3.dae  wheel4.dae
blender/tosdf/migbot2/: model.config  model.sdf
blender/tosdf/migbot2/meshes/: wheel1.dae  wheel2.dae  wheel3.dae  wheel4.dae
blender/tosdf/rover_sdf/: model.config  model.sdf
blender/tosdfnew/: model.sdf
blender/tosdfnew/car_like/: model.config  model.sdf
blender/tosdfnew/meshes/: wheel1.dae  wheel2.dae  wheel3.dae  wheel4.dae
blender/toxacro/car_like_description/: CMakeLists.txt  package.xml
car_like_description/: CMakeLists.txt  package.xml  start_controllers_after_spawn.sh
car_like_description/config/: controllers.yaml  ekf.yaml
car_like_description/launch/: car_like_gazebo.launch
car_like_description/scripts/: car_like_odometry_node.py  car_like_v_angle_controller.py
car_like_description/urdf/: car_like.urdf.xacro
car_like_description/urdf/meshes/: __steer_placeholder.dae  front_left_steer_link.dae  front_left_wheel.dae  front_right_steer_link.dae  front_right_wheel.dae  left_steering_visual.dae  rear_left_wheel.dae  rear_right_wheel.dae  right_steering.dae  right_steering_visual.dae  wheel1.dae  wheel3.dae  wheel4.dae
(+25 files in other folders)
