<?xml version="1.0"?>
<package format="2">
  <name>car_like_description</name>
  <version>0.0.1</version>
  <description>Car-like robot (URDF/Xacro) + Gazebo Classic + ROS1 control via cmd_vel.</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export />
</package>

